# mini-SymPy

./: pyproject.toml
example_code/: expression_tools.py
expressions/: __init__.py  expressions.py
