[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chapter-9"
version = "0.1"
dependencies = ["numpy"]

[project.optional-dependencies]
all = [
    "flake8",
    "pep8-naming",
    "flake8-docstrings",
    "pytest",
    "pandas",
    "ipdb",
    "debugpy",
    "sys",
    "os",
]

[tool.hatch.build.targets.wheel]
packages = ["expressions"]